--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.2",
