--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "sqlite3": "^5.0.0",
     "ts-node-dev": "^1.0.0-pre.56"
